--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>แนะนำตัวเอง</h1>
-    <img src="pic/1441653784-1010286480-o.jpg" width="300px" alt=""> 
+    <img src="1441653784-1010286480-o.jpg" width="300px" alt=""> 
     <h2>นายภัทรพล บุญพา<h2>
     <h3>ชื่อเล่น มายด์ อายุ 19 ปี</p>
     <h4>มาจาก <a href="http://www.dmr.ac.th">โรงเรียนธรรมราชศึกษา</a> วัดพระสิงห์วรมหาวิหาร จังหวัดเชียงใหม่</p>
